--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px red solid;
+  /* border: 1px red solid; */
 }
 
 :root {
@@ -8,7 +8,7 @@
 
 * {
   box-sizing: border-box;
-/*	margin: 0;
+	/* margin: 0;
 	padding: 0; */
 }
 
@@ -19,5 +19,68 @@
 body {
 	margin: 0;
 	font-size: 1.6rem;
-	font-family: ;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: #fff5f0;
+}
+
+button {
+	font-size: 2.5rem;
+}
+
+#calc {
+	height: 520px;
+	width: 400px;
+	border: 14px rgb(189, 120, 60) solid;
+	border-radius: 5px;
+	background-color: black;
+}
+
+#screen {
+	height: 100px;
+	background-color: #fff5f0;
+	font-size: 7rem;
+	display: flex;
+	justify-content: end;
+	align-items: flex-end;
+	border: 2px solid black;
+	border-radius: 8px;
+}
+
+#buttons {
+	border-top: black solid 1px;
+	height: 392px;
+	display: flex;
+	flex-wrap: wrap;
+	background-color: black;
+}
+
+.button {
+	width: 25%;
+	border-radius: 7px;
+	border-color: black;
+	font-family: monospace;
+}
+
+.button:active {
+	filter: brightness(120%);
+}
+
+.oper {
+	background-color: #F6EEE0;
+}
+
+.clear {
+	background-color: #b66545;
+}
+
+.num {
+	background-color: #E4B7A0;
+}
+
+.extra {
+	background-color: #C38370;
 }
